--- a/src/CSS/Fonts.css
+++ b/src/CSS/Fonts.css
@@ -84,16 +84,17 @@ h1,.h1 {
   font-size: clamp(3.6rem, 5.8vw, 6.5rem);  /* 3.6rem = 36px */
   margin: clamp(15px, 5vw, 40px) 0; 
   line-height: 1.3;
+  hyphens: auto;
 }
 h2,.h2 { 
   font-family: 'Lexend-SemiBold'; 
   font-size: clamp(2.8rem, 3.6vw, 4rem); /* 2.8rem = 28px */
-  margin: clamp(10px, 4vw, 30px); 
+  margin: clamp(10px, 4vw, 30px) 0; 
   line-height: 1.15;
 } 
 h3,.h3 { 
   font-family: 'Lexend-Bold'; 
-  margin: clamp(5px, 3vw, 15px);
+  margin: clamp(5px, 3vw, 15px) 0;
   font-size: clamp(2.4rem, 3.1vw, 3.4rem);
 }
 h4 { font-size: 2rem; margin: 10px 0 10px 0;}
@@ -106,6 +107,11 @@ p, a, label {
   color:inherit;
 }
 
+a:hover {
+  color:var(--portato-green);
+}
+
+.text-note {font-size:1.4rem; line-height:1.4}
 .text-hint {font-size:1.1rem;}
 
 /*.section-form label { font-family: 'Lexend'; font-size: 1.8rem!important;} /*sorry for this one, but it was the easiest for today */
